Avoid usage of array list